matroskademux: set framerate 0/1 when duration is not known

https://bugzilla.gnome.org/show_bug.cgi?id=740130